--- a/lesson01/exercise05/start/index.html
+++ b/lesson01/exercise05/start/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Lesson 01: Exercise 03 - External style sheet - start</title>
-
+		<link rel="stylesheet" href="styles.css" />
 	</head>
 	<body>
 		<h1>
