--- a/lesson05/exercise02/start/index.html
+++ b/lesson05/exercise02/start/index.html
@@ -13,9 +13,9 @@
 			This is a heading level 2
 		</h2>
 		<p>
-			Lorem ipsum dolor sit amet consect etuer adipi scing elit sed diam nonummy nibh euismod tinunt ut laoreet dolore magna aliquam erat volut. 
+			Lorem ipsum dolor sit amet consect etuer adipi scing elit sed diam nonummy nibh euismod tinunt ut laoreet dolore magna aliquam erat volut.
 		</p>
-		<h2 class="news" id="news">
+		<h2 class="news" id="news" style="color: red;">
 			This is a heading level 2
 		</h2>
 		<p>
