--- a/lesson10/exercise01/start/index.html
+++ b/lesson10/exercise01/start/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Lesson 10: Exercise 01: link - start</title>
-	    <link href="styles.css" rel="stylesheet">
+	    <link href="styles.css" rel="stylesheet" media="screen">
 	</head>
 	<body>
 		<h1>
